# XSSpectre

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: false-positive-handling.md  scan-strategy.md  tuning-options.md
tests/: test_cli_args.py  test_param_discovery.py  test_reporting.py  test_sqli_detection.py  test_xss_detection.py
tests/fixtures/: forms_page.html  reflected_encoded.html  reflected_raw.html
xsspectre/: __init__.py  cli.py  reporting.py
xsspectre/scanners/: __init__.py  common.py  sqli.py  xss.py
