[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xsspectre"
version = "0.1.0"
description = "Authorized baseline XSS/SQLi scanner"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "XSSpectre Maintainers" }]
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Information Technology",
  "Topic :: Security",
]

[project.optional-dependencies]
http = ["httpx>=0.27.0"]
dev = [
  "black>=24.4.0",
  "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/example/xsspectre"
Documentation = "https://github.com/example/xsspectre/tree/main/docs"

[project.scripts]
xsspectre = "xsspectre.cli:main"

[tool.setuptools]
packages = ["xsspectre", "xsspectre.scanners"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]
